--- a/css/zoteedit.css
+++ b/css/zoteedit.css
@@ -10,6 +10,7 @@ header{
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
+	margin: 0;
 }
 
 header h1{
@@ -20,7 +21,7 @@ header h1{
 h2{
 	font-size: 20px;
 	font-family: 'Helverica', 'Arial', sans-serif;
-	margin: 40px 0px 10px;
+	margin: 0px 0px;
 
 }
 header img{
@@ -31,11 +32,15 @@ header img{
 p{
 	text-align: center;
 }
+p.under-img-text{
+	font-family: Impact;
+}
 
 main{
 	max-width: 800px;
 	margin: 0 auto;
 	padding: 0 20px;
+	background-image: linear-gradient(#804DA1, #AD75D1);
 
 }
 
